@@ -527,7 +527,7 @@ fieldset select,
 fieldset img {
 	float: left;
 	width: auto;
-	margin: 3px 3px 10px 0px;
+	margin: 5px 5px 10px 0px;
 }
 
 
@@ -677,11 +677,9 @@ li#jform_access_label {
 }
 
 
-
-
-
 fieldset.adminform fieldset.radio,
-fieldset.panelform fieldset.radio {
+fieldset.panelform fieldset.radio,
+fieldset.adminform-legacy fieldset.radio  {
 	border: 0;
 	float:left;
 	padding: 0;
@@ -696,52 +694,44 @@ fieldset.panelform fieldset.radio label {
 }
 
 
-fieldset.panelform-legacy label {
-	min-width: 40px;
+fieldset.panelform-legacy label,
+fieldset.adminform-legacy label {
+	min-width: 150px;
 	float:left;
-	clear:none;
+	
+}
+fieldset.panelform-legacy hr {
+	display:none;
+	clear:both;
 }
 
 
-
-
-
-
-
-
-/* 
-fieldset.adminform label.radiobtn_no,
-fieldset.adminform label.radiobtn_yes,
-fieldset.adminform label.radiobtn_disabled,
-fieldset.adminform label.radiobtn_enabled,
-fieldset.adminform label.radiobtn_hide,
-fieldset.adminform label.radiobtn_show,
-fieldset.panelform label.radiobtn_no,
-fieldset.panelform label.radiobtn_yes,
-fieldset.panelform label.radiobtn_off,
-fieldset.panelform label.radiobtn_on,
-fieldset.panelform label.radiobtn_hide,
-fieldset.panelform label.radiobtn_show,
-fieldset.panelform label.radiobtn_never,
-fieldset.panelform label.radiobtn_required,
-fieldset.panelform label.radiobtn_optional,
-fieldset.panelform label.radiobtn_down,
-fieldset.panelform label.radiobtn_across,
-fieldset.panelform label.radiobtn_left,
-fieldset.panelform label.radiobtn_right,
-fieldset.panelform label.radiobtn_auto {
+/* JParameter classes on radio button labels  */
+fieldset.panelform-legacy label.radiobtn_jno,
+fieldset.panelform-legacy label.radiobtn_jyes,
+fieldset.panelform-legacy label.radiobtn_show,
+fieldset.panelform-legacy label.radiobtn_hide,
+fieldset.panelform-legacy label.radiobtn_off,
+fieldset.panelform-legacy label.radiobtn_on {
 	min-width: 40px !important;
 	clear:none !important;
 }
 
-fieldset.adminform label.radiobtn_published,
-fieldset.adminform label.radiobtn_unpublished,
-fieldset.panelform label.radiobtn_ignore,
-fieldset.panelform label.radiobtn_use {
-	min-width: 55px !important;
-	clear:none !important;
+#jform_plugdesc-lbl,
+#jform_description-lbl {
+	font-weight:bold;
+	clear:both;
+	margin-top: 15px;
 }
-*/
+p.jform_desc {
+	clear:left;	
+}
+
+div#jform_ordering {
+	font-size: 12px;
+	margin-top: 3px;
+}
+
 
 fieldset.filter			{ border:0;margin:0;padding:0 0 5px;}
 fieldset.filter ol		{ border:0;list-style:none;margin:0;padding:5px 0 0;}
